1,详情界面改善 2,新增搜索界面

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="actionBarStyle">#8CC34B</color>
+    <color name="actionBarStyle">#21B11E</color>
     <color name="white">#ffffff</color>
 
 </resources>
