--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <include layout="@layout/layout_title" />
 
@@ -18,9 +19,18 @@
 
             <TextView
                 android:id="@+id/description_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="#6D6D6D"
+                android:gravity="center_horizontal"/>
+
+            <TextView
+                android:id="@+id/description_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
                 android:textColor="#6D6D6D"
                 android:gravity="center_horizontal"/>
 
